# Qcodes_loop

./: .buildinfo  .gitignore  .nojekyll  .pre-commit-config.yaml  LICENSE  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/actions/setup-ubuntu-latest-xvfb/: action.yml
.github/workflows/: darker.yaml  docs.yaml  pytest.yaml  upload_to_pypi.yaml
_sources/: index.rst.txt
_sources/api/: loops.rst.txt  measure.rst.txt
_sources/api/data/: data_array.rst.txt  data_set.rst.txt  format.rst.txt  gnuplot_format.rst.txt  hdf5_format.rst.txt  hdf5_format_hickle.rst.txt  index.rst.txt  io.rst.txt  location.rst.txt
_sources/api/extensions/: slack.rst.txt
_sources/api/plots/: base.rst.txt  colors.rst.txt  index.rst.txt  pyqtgraph.rst.txt  qcmatplotlib.rst.txt
_sources/api/utils/: magic.rst.txt
_sources/examples/: Datasaving examples.ipynb.txt  Measure without a Loop.ipynb.txt  The Location Formatter.ipynb.txt  The Snapshot.ipynb.txt  Tutorial.ipynb.txt
_static/: README
api/: actions.html  index.html  loops.html  measure.html
api/data/: data_array.html  data_set.html  format.html  gnuplot_format.html  hdf5_format.html  hdf5_format_hickle.html  index.html  io.html  location.html
api/extensions/: slack.html
api/plots/: base.html  colors.html  index.html  pyqtgraph.html  qcmatplotlib.html
api/utils/: magic.html
docs/: conf.py  index.rst
docs/_static/: README
docs/api/: actions.rst  index.rst
docs/api/extensions/: slack.rst
docs/examples/: Combined Parameters.ipynb  Comprehensive Plotting How-To.ipynb  Measure without a Loop.ipynb  The Location Formatter.ipynb  The Snapshot.ipynb  Tutorial.ipynb  index.rst
examples/: Combined Parameters.html  Combined Parameters.ipynb  Comprehensive Plotting How-To.html  Comprehensive Plotting How-To.ipynb  Datasaving examples.html  Datasaving examples.ipynb  Legacy.html  Measure without a Loop.html  The Location Formatter.html  The Location Formatter.ipynb  The Snapshot.html  The Snapshot.ipynb  Tutorial.html  Tutorial.ipynb  index.html
src/qcodes_loop/: __init__.py  _version.py  actions.py  loops.py  measure.py  sweep_values.py
src/qcodes_loop/data/: data_array.py  data_set.py  format.py  gnuplot_format.py  hdf5_format.py  hdf5_format_hickle.py  io.py  location.py
src/qcodes_loop/extensions/: slack.py
src/qcodes_loop/plots/: base.py  colors.py  pyqtgraph.py  qcmatplotlib.py
src/qcodes_loop/tests/: common.py  data_mocks.py  test_channels.py  test_combined_loop.py  test_data.py  test_format.py  test_generic_formatter.py  test_hdf5formatter.py  test_issequence.py  test_location_provider.py  test_loop.py  test_make_sweep.py  test_measure.py  test_permissive_range.py  test_plots.py  test_qcmatplotlib_functions.py  test_slack.py  test_sweep_values.py  test_threading.py  test_waitsecs.py
src/qcodes_loop/utils/: magic.py
