[build-system]
requires = [
    "setuptools >= 61.2",
    "wheel >= 0.29.0",
    "versioningit ~= 2.0.1",
]
build-backend = 'setuptools.build_meta'

[project]
name = "qcodes_loop"
maintainers = [{name = "QCoDeS Core Developers", email = "qcodes-support@microsoft.com"}]
description = "Features previously in QCoDeS"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "qcodes>=0.37.0",
    "h5py>=3.0.0",
    "lazy_loader>=0.1",
    "matplotlib>=3.3.0",
    "numpy>=1.21.0",
    "pandas>=1.0.0",
    "versioningit>=2.0.1",
    "xarray>=0.18.0",
    "hickle",
    "ipython>=7.31.1,!=8.0.0",
]

dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/QCoDeS/Qcodes_loop"
Documentation = "https://qcodes.github.io/Qcodes_loop/"
Source = "https://github.com/qcodes/qcodes_loop"
Tracker = "https://github.com/QCoDeS/Qcodes_loop/issues"

[project.optional-dependencies]
qtplot = ["pyqtgraph>=0.11.0"]
slack = ["slack-sdk>=3.4.2"]
test = [
    "coverage[toml]>=6.0.0",
    "hypothesis>=5.49.0",
    "pytest>=6.1.0",
    "pytest-xdist>=2.0.0",
    "pytest-mock>=3.0.0",
    "pyqtgraph>=0.11.0", # pyqtgraph tests
    "PyQt5>=5.15.0", # pyqtgraph tests
    "slack-sdk>=3.4.2", # needed to typecheck slack extension
]
docs = [
    "nbsphinx>=0.8.9",
    "PyQt5>=5.15.0", # pyqtgraph examples
    "pyqtgraph>=0.11.0", # pyqtgraph examples
    "sphinx>=4.5.0",
    "slack-sdk>=3.4.2", # slack example notebook
]


[tool.coverage.run]
omit = [
    "*/__init__.py",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.darker]
isort = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
junit_family = "legacy"

addopts = "-n auto --dist=loadfile"

markers = "serial"

# warnings triggered by xarray and hdf5netcdf using deprecated apis
filterwarnings = [
    "ignore:The distutils package is deprecated and slated for removal in Python 3.12:DeprecationWarning",
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning"
]

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{branch}.{vcs}{rev}"
dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"
distance-dirty = "{next_version}.dev{distance}+{branch}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.onbuild]
source-file = "src/qcodes_loop/_version.py"
build-file = "qcodes_loop/_version.py"
